--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -13,8 +13,8 @@ datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 err_handling.$(OBJEXT): io_units.$(OBJEXT)
 err_handling.lo: io_units.$(OBJEXT)
-file_utilities.$(OBJEXT): err_handling.$(OBJEXT)
-file_utilities.lo: err_handling.$(OBJEXT)
+file_utilities.$(OBJEXT): kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT)
+file_utilities.lo: kinds.$(OBJEXT) char_utilities.$(OBJEXT) missing_values.$(OBJEXT) err_handling.$(OBJEXT)
 geo_coord_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
 geo_coord_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
 geo_grid_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT)
