log4fortran: sistemato esempio con classe netcdf
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@255 500a5620-302c-0410-bb8c-d54761bbe776

--- a/log4fortran/Makefile.am
+++ b/log4fortran/Makefile.am
@@ -1,6 +1,8 @@
 lib_LTLIBRARIES = liblog4fortran.la
 liblog4fortran_la_SOURCES = log4fortran.F90
 
+AM_FCFLAGS = -I../base
+
 if LOG4FORTRAN
 liblog4fortran_la_SOURCES +=  log4fortran_c.c
 endif
