correzzioni a esportazione netcdf
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@256 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -11,7 +11,7 @@ libsim_vol7d_la_SOURCES += vol7d_dballe_class.F90
 endif
 
 if NETCDF
-libsim_vol7d_la_SOURCES += vol7d_netcdf_class.F90
+libsim_vol7d_la_SOURCES += vol7d_netcdf_class.f90
 endif
 
 AM_FCFLAGS = -I../base -I../log4fortran
