Aggiunte funzioni per la gestione interpoerativa di variabili caratter tra Fortran e C
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@258 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -9,6 +9,8 @@ AM_LDFLAGS = $(libshp)
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
+char_utilities.$(OBJEXT): kinds.$(OBJEXT)
+char_utilities.lo: kinds.$(OBJEXT)
 datetime_class.$(OBJEXT): err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 datetime_class.lo: err_handling.$(OBJEXT) missing_values.$(OBJEXT)
 err_handling.$(OBJEXT): io_units.$(OBJEXT)
