--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -3,7 +3,9 @@ libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 
  file_utilities.f90 geo_coord_class.F90 geo_grid_class.f90 \
  io_units.f90 kinds.F90 missing_values.f90 phys_const.f90
 
-AM_LDFLAGS = $(libshp)
+if SHP
+libsim_base_la_LIBADD = $(SHP_LIBS)
+endif
 
 # c'e` una maniera migliore?
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
