implementato get_val
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@280 500a5620-302c-0410-bb8c-d54761bbe776

--- a/grid5d/Makefile
+++ b/grid5d/Makefile
@@ -3,7 +3,7 @@
 
 FC = gfortran
 LD = gfortran
-FFLAGS=-I/usr/include -g -fbounds-check 
+FFLAGS=-I../log4fortran -I../base -I../vol7d -g -fbounds-check 
 LDFLAGS=-llog4fortran -lsim_base
 
 
