Corretta uan dimenticanza
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@292 500a5620-302c-0410-bb8c-d54761bbe776

--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -5,7 +5,7 @@ AM_FCFLAGS = -I../base
 libsim_grib_la_LIBADD = ../base/libsim_base.la 
 
 if EMOS
-libsim_grib_la_SOURCES += grib_io_class.F90 geo_grid_grib.f90 matchgrib_class.f90
+libsim_grib_la_SOURCES += grib_io_class.F90 geo_grid_grib.F90 matchgrib_class.f90
 libsim_grib_la_LIBADD += $(EMOS_LIBS)
 endif
 
