abbozzo metodi import ed export
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@295 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile
+++ b/volgrid6d/Makefile
@@ -3,7 +3,7 @@
 
 FC = gfortran
 LD = gfortran
-FFLAGS=-I../log4fortran -I../base -I../vol7d -g -fbounds-check 
+FFLAGS=-I../log4fortran -I../base -I../vol7d -I/usr/include -g -fbounds-check 
 LDFLAGS=  -lsim_vol7d -lsim_base -llog4fortran
 
 
