continua l'implementazione delle grib_api
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@296 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile
+++ b/volgrid6d/Makefile
@@ -4,7 +4,7 @@
 FC = gfortran
 LD = gfortran
 FFLAGS=-I../log4fortran -I../base -I../vol7d -I/usr/include -g -fbounds-check 
-LDFLAGS=  -lsim_vol7d -lsim_base -llog4fortran
+LDFLAGS=  -lsim_vol7d -lsim_base -llog4fortran -lgrib_api_f90 -lgrib_api 
 
 
 
