Primo abbozzo di funzionamento di demo2 e gribinfo
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@297 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile
+++ b/volgrid6d/Makefile
@@ -10,9 +10,11 @@ LDFLAGS=  -lsim_vol7d -lsim_base -llog4fortran -lgrib_api_f90 -lgrib_api
 
 .DEFAULT:
 	-touch $@
-all: demo
+all: demo demo2
 demo.o: ./demo.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o volgrid6d_class.o
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo.f90
+demo2.o: ./demo2.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o
+	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo2.f90
 grid_class.o: ./grid_class.f90 regular_ll.o rotated_ll.o
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./grid_class.f90
 regular_ll.o: ./regular_ll.f90
@@ -26,15 +28,17 @@ volgrid6d_class.o: ./volgrid6d_class.f90
 gridinfo_class.o: ./gridinfo_class.f90
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./gridinfo_class.f90
 
-SRC = ./demo.f90 ./grid_class.f90 ./rotated_ll.f90 ./regular_ll.f90 ./volgrid6d_var_class.F90 ./volgrid6d_class.F90
-OBJ = demo.o grid_class.o rotated_ll.o regular_ll.o volgrid6d_var_class.o volgrid6d_class.o
+SRC = demo.f90 demo2.f90 ./grid_class.f90 ./rotated_ll.f90 ./regular_ll.f90 ./volgrid6d_var_class.F90 ./volgrid6d_class.F90 gridinfo_class.f90
+OBJ =  grid_class.o rotated_ll.o regular_ll.o volgrid6d_var_class.o volgrid6d_class.o gridinfo_class.o
 clean: neat
-	-rm -f .cppdefs $(OBJ) demo
+	-rm -f .cppdefs $(OBJ) demo demo2
 neat:
 	-rm -f $(TMPFILES)
 TAGS: $(SRC)
 	etags $(SRC)
 tags: $(SRC)
 	ctags $(SRC)
-demo: $(OBJ) 
-	$(LD) $(OBJ) -o demo  $(LDFLAGS)
+demo: demo.o $(OBJ) 
+	$(LD) demo.o $(OBJ) -o demo  $(LDFLAGS)
+demo2: demo2.o $(OBJ) 
+	$(LD) demo2.o $(OBJ) -o demo2  $(LDFLAGS)
