--- a/volgrid6d/Makefile
+++ b/volgrid6d/Makefile
@@ -10,13 +10,14 @@ LDFLAGS=  -lsim_vol7d -lsim_base -llog4fortran -lgrib_api_f90 -lgrib_api -llog4c
 
 .DEFAULT:
 	-touch $@
-all: demo demo2 demo3
+all: demo demo2 demo3 demo4
 demo.o: ./demo.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o volgrid6d_class.o
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo.f90
 demo2.o: ./demo2.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo2.f90
 demo3.o: ./demo3.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o volgrid6d_class.o
-	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo3.f90
+demo4.o: ./demo4.f90 grid_class.o gridinfo_class.o volgrid6d_class.o
+	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo4.f90
 grid_class.o: ./grid_class.F90 regular_ll.o rotated_ll.o
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./grid_class.F90
 regular_ll.o: ./regular_ll.f90
@@ -30,10 +31,10 @@ volgrid6d_class.o: ./volgrid6d_class.f90
 gridinfo_class.o: ./gridinfo_class.f90
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./gridinfo_class.f90
 
-SRC = demo.f90 demo2.f90 demo3.f90 ./grid_class.F90 ./rotated_ll.f90 ./regular_ll.f90 ./volgrid6d_var_class.F90 ./volgrid6d_class.F90 gridinfo_class.f90
+SRC = demo.f90 demo2.f90 demo3.f90 demo4.f90 ./grid_class.F90 ./rotated_ll.f90 ./regular_ll.f90 ./volgrid6d_var_class.F90 ./volgrid6d_class.F90 gridinfo_class.f90
 OBJ =  grid_class.o rotated_ll.o regular_ll.o volgrid6d_var_class.o volgrid6d_class.o gridinfo_class.o
 clean: neat
-	-rm -f .cppdefs $(OBJ) demo demo2 demo3
+	-rm -f .cppdefs $(OBJ) demo demo2 demo3 demo4
 neat:
 	-rm -f $(TMPFILES)
 TAGS: $(SRC)
@@ -46,3 +47,5 @@ demo2: demo2.o $(OBJ)
 	$(LD) demo2.o $(OBJ) -o demo2  $(LDFLAGS)
 demo3: demo3.o $(OBJ) 
 	$(LD) demo3.o $(OBJ) -o demo3  $(LDFLAGS)
+demo4: demo4.o $(OBJ) 
+	$(LD) demo4.o $(OBJ) -o demo4  $(LDFLAGS)
