Correzioni di bachi per esportazione livelli e timerange.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@319 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile
+++ b/volgrid6d/Makefile
@@ -16,6 +16,7 @@ demo.o: ./demo.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o volgrid6d
 demo2.o: ./demo2.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo2.f90
 demo3.o: ./demo3.f90 grid_class.o volgrid6d_var_class.o gridinfo_class.o volgrid6d_class.o
+	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo3.f90
 demo4.o: ./demo4.f90 grid_class.o gridinfo_class.o volgrid6d_class.o
 	$(FC) $(FFLAGS) $(OTHERFLAGS) -c	./demo4.f90
 grid_class.o: ./grid_class.F90 regular_ll.o rotated_ll.o
