--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 \
  file_utilities.f90 geo_coord_class.F90 geo_grid_class.f90 \
- io_units.f90 kinds.F90 missing_values.f90 phys_const.f90
+ io_units.f90 kinds.F90 missing_values.f90 phys_const.f90 getopt_m.f90
 
 if SHP
 libsim_base_la_LIBADD = $(SHP_LIBS)
