migliorata documentazione e inserita getopt in volgrid6d demo4
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@335 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -30,7 +30,7 @@ endif
 
 if NETCDF
 libsim_vol7d_la_SOURCES += vol7d_netcdf_class.f90
-AM_FCFLAGS += -I/usr/include/netcdf-3
+AM_FCFLAGS += -I/usr/include
 libsim_vol7d_la_LIBADD += $(NETCDF_LIBS)
 endif
 
