Aggiunte le dipendenze per la libreria log4fortran.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@348 500a5620-302c-0410-bb8c-d54761bbe776

--- a/log4fortran/Makefile.am
+++ b/log4fortran/Makefile.am
@@ -4,7 +4,8 @@ liblog4fortran_la_SOURCES = log4fortran.F90
 AM_FCFLAGS = -I../base
 
 if LOG4FORTRAN
-liblog4fortran_la_SOURCES +=  log4fortran_c.c
+liblog4fortran_la_SOURCES += log4fortran_c.c
+liblog4fortran_la_LIBADD = -llog4c -lcnf
 endif
 
 
