--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = libsim.spec
 
 # Execute make in subdirs
-SUBDIRS = base log4fortran grib vol7d data qc termolib examples doc
+SUBDIRS = base log4fortran grib vol7d volgrid6d data qc termolib examples doc 
 
