cambio versione e corretto bug in make dist
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@364 500a5620-302c-0410-bb8c-d54761bbe776

--- a/volgrid6d/Makefile.am
+++ b/volgrid6d/Makefile.am
@@ -18,7 +18,7 @@ nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
 
 if GRIBAPI
-libsim_volgrid6d_la_SOURCES = grid_class.F90 rotated_ll_class.f90 regular_ll_class.f90 volgrid6d_var_class.F90 volgrid6d_class.F90 gridinfo_class.f90
+libsim_volgrid6d_la_SOURCES = grid_class.F90 rotated_ll_class.f90 regular_ll_class.f90 volgrid6d_var_class.F90 volgrid6d_class.f90 gridinfo_class.f90
 libsim_volgrid6d_la_LIBADD += $(GRIBAPI_LIBS)
 endif
 
